fixed nav menu z-index problem

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -128,14 +128,26 @@ a:hover { text-decoration: none; }
   padding-left: 60px;
   padding-right: 60px;
 }
-
 /* -------------- Project Elements ----------------*/
 
 .image-background { 
   background-repeat: no-repeat;
   background-position: center;
 }
+.page-content-container {
+  overflow-x: hidden !important;
+}
 
+::-webkit-scrollbar {
+  width: 1vw;
+}
+::-webkit-scrollbar-track-piece  {
+    background-color: #C2D2E4;
+}
+::-webkit-scrollbar-thumb:vertical {
+    border-radius: $border-radius;
+    background-color: grey;
+}
 /* ------------- Navigation Bar ------------- */
 
 .nav {
@@ -259,10 +271,12 @@ nav .logo-link {
 /* ------------------------------------ PAGES -----------------------------------*/
 /* ------------ Home Page ------------ */
 /* spectial Home Page Nav */
+.page-end-top {
+  z-index: 99;
+}
 .page-home {
   .page-end-top {
     position: absolute;
-    z-index: 99;
   }
   .nav {
     background: transparent;
